airflow/logs/dag_id=empower_to_ggdrive/run_id=manual__2023-07-26T215942.263419+0000/task_id=scraping/attempt=1.log
[2023-07-26T21:59:44.083+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: empower_to_ggdrive.scraping manual__2023-07-26T21:59:42.263419+00:00 [queued]>
[2023-07-26T21:59:44.094+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: empower_to_ggdrive.scraping manual__2023-07-26T21:59:42.263419+00:00 [queued]>
[2023-07-26T21:59:44.095+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2023-07-26T21:59:44.120+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): scraping> on 2023-07-26 21:59:42.263419+00:00
[2023-07-26T21:59:44.127+0000] {standard_task_runner.py:57} INFO - Started process 498 to run task
[2023-07-26T21:59:44.132+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'empower_to_ggdrive', 'scraping', 'manual__2023-07-26T21:59:42.263419+00:00', '--job-id', '195', '--raw', '--subdir', 'DAGS_FOLDER/empower_to_ggdrive.py', '--cfg-path', '/tmp/tmpdczutf2w']
[2023-07-26T21:59:44.135+0000] {standard_task_runner.py:85} INFO - Job 195: Subtask scraping
[2023-07-26T21:59:44.191+0000] {task_command.py:410} INFO - Running <TaskInstance: empower_to_ggdrive.scraping manual__2023-07-26T21:59:42.263419+00:00 [running]> on host bdafa43ae894
[2023-07-26T21:59:44.296+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='empower_to_ggdrive' AIRFLOW_CTX_TASK_ID='scraping' AIRFLOW_CTX_EXECUTION_DATE='2023-07-26T21:59:42.263419+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-07-26T21:59:42.263419+00:00'
[2023-07-26T21:59:44.298+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/tasks.py", line 5, in scraping
    exec("./scraping/scraping.py")
  File "<string>", line 1
    ./scraping/scraping.py
    ^
SyntaxError: invalid syntax
[2023-07-26T21:59:44.312+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=empower_to_ggdrive, task_id=scraping, execution_date=20230726T215942, start_date=20230726T215944, end_date=20230726T215944
[2023-07-26T21:59:44.329+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 195 for task scraping (invalid syntax (<string>, line 1); 498)
[2023-07-26T21:59:44.385+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-07-26T21:59:44.413+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
